--- a/v02/peNoChao/package.json
+++ b/v02/peNoChao/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "bcrypt": "^4.0.1",
+    "cep-promise": "^3.0.9",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
