--- a/v02/peNoChao/package.json
+++ b/v02/peNoChao/package.json
@@ -15,6 +15,7 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "mysql2": "^2.1.0",
+    "nodemailer": "^6.4.8",
     "sequelize": "^5.21.9"
   },
   "devDependencies": {
